sumo/tests/traci/StopNode/InvalidNode/testclient.prog
simstep 1 1
stopnode2d -1 0 0 0 0
simstep 1
